exports[`test renders correctly (without task help) 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "height": 25,
      },
    ]
  }>
  <View
    style={undefined}>
    <WebView
      automaticallyAdjustContentInsets={true}
      domStorageEnabled={true}
      javaScriptEnabled={true}
      onNavigationStateChange={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      scalesPageToFit={true}
      source={
        Object {
          "baseUrl": "about:blank",
          "html": "<!DOCTYPE html>
        <html>
            <head>
                <meta charset=\"utf-8\">
                <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">
                <meta name=\"viewport\" content=\"initial-scale=1, maximum-scale=1\">
                <meta name=\"format-detection\" content=\"telephone=no\">
                <meta name=\"format-detection\" content=\"date=no\">
                <meta name=\"format-detection\" content=\"address=no\">
                <meta name=\"format-detection\" content=\"email=no\">
        
                <title></title>
        
        
                <style type=\"text/css\">
                    body, html, #height-wrapper {
                        margin: 0;
                        padding: 0;
                    }
                    #height-wrapper {
                        position: absolute;
                        top: 0;
                        left: 0;
                        right: 0;
                    }
                    body {
                        font-family: \"Open Sans\", \"Gill Sans\", Arial, sans-serif;
                    }
                    b, strong {
                        font-family: \"Open Sans\", \"Gill Sans\", Arial, sans-serif;
                        font-weight: bold;
                    }
                    h1, h2, h3, h4, h5, h6 {
                        margin-top: 10px;
                        font-family: \"Open Sans\", \"Gill Sans\", Arial, sans-serif;
                        font-weight: 500;
                    }
                    img {
                      height: auto;
                      width: auto;
                      max-width: 300px;
                      max-height: 300px;
                    }
                    p {
                      margin: 0;
                    }
                    p {font-size: 14px; font-weight: 500; margin: 5px 0 0;}
                </style>
            </head>
            <body>
                <p>Is this this?</p>
        
        
            <script>
        
            ;(function() {
            var wrapper = document.createElement(\"div\");
            wrapper.id = \"height-wrapper\";
            while (document.body.firstChild) {
                wrapper.appendChild(document.body.firstChild);
            }
            document.body.appendChild(wrapper);
            var i = 0;
            function updateHeight() {
                document.title = wrapper.clientHeight;
                window.location.hash = ++i;
            }
            updateHeight();
            window.addEventListener(\"load\", function() {
                updateHeight();
                setTimeout(updateHeight, 1000);
            });
            window.addEventListener(\"resize\", updateHeight);
            }());
        
            </script>
            </body>
        </html>",
        }
      }
      style={
        Array [
          undefined,
          Object {
            "height": 0,
            "width": 275,
          },
        ]
      } />
  </View>
</View>
`;

exports[`test renders correctly with task help 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "height": 25,
      },
    ]
  }>
  <View
    style={undefined}>
    <WebView
      automaticallyAdjustContentInsets={true}
      domStorageEnabled={true}
      javaScriptEnabled={true}
      onNavigationStateChange={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      scalesPageToFit={true}
      source={
        Object {
          "baseUrl": "about:blank",
          "html": "<!DOCTYPE html>
        <html>
            <head>
                <meta charset=\"utf-8\">
                <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">
                <meta name=\"viewport\" content=\"initial-scale=1, maximum-scale=1\">
                <meta name=\"format-detection\" content=\"telephone=no\">
                <meta name=\"format-detection\" content=\"date=no\">
                <meta name=\"format-detection\" content=\"address=no\">
                <meta name=\"format-detection\" content=\"email=no\">
        
                <title></title>
        
        
                <style type=\"text/css\">
                    body, html, #height-wrapper {
                        margin: 0;
                        padding: 0;
                    }
                    #height-wrapper {
                        position: absolute;
                        top: 0;
                        left: 0;
                        right: 0;
                    }
                    body {
                        font-family: \"Open Sans\", \"Gill Sans\", Arial, sans-serif;
                    }
                    b, strong {
                        font-family: \"Open Sans\", \"Gill Sans\", Arial, sans-serif;
                        font-weight: bold;
                    }
                    h1, h2, h3, h4, h5, h6 {
                        margin-top: 10px;
                        font-family: \"Open Sans\", \"Gill Sans\", Arial, sans-serif;
                        font-weight: 500;
                    }
                    img {
                      height: auto;
                      width: auto;
                      max-width: 300px;
                      max-height: 300px;
                    }
                    p {
                      margin: 0;
                    }
                    p {font-size: 14px; font-weight: 500; margin: 5px 0 0;}
                </style>
            </head>
            <body>
                <p>Is this this?</p>
        
        
            <script>
        
            ;(function() {
            var wrapper = document.createElement(\"div\");
            wrapper.id = \"height-wrapper\";
            while (document.body.firstChild) {
                wrapper.appendChild(document.body.firstChild);
            }
            document.body.appendChild(wrapper);
            var i = 0;
            function updateHeight() {
                document.title = wrapper.clientHeight;
                window.location.hash = ++i;
            }
            updateHeight();
            window.addEventListener(\"load\", function() {
                updateHeight();
                setTimeout(updateHeight, 1000);
            });
            window.addEventListener(\"resize\", updateHeight);
            }());
        
            </script>
            </body>
        </html>",
        }
      }
      style={
        Array [
          undefined,
          Object {
            "height": 0,
            "width": 275,
          },
        ]
      } />
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": undefined,
            "fontFamily": "FontAwesome",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          undefined,
        ]
      }>
      
    </Text>
    <View>
      <Modal
        animationType="fade"
        onRequestClose={[Function]}
        transparent={true}
        visible={false}>
        <View
          style={undefined}>
          <ScrollView
            contentContainerStyle={undefined}
            style={undefined}>
            <View
              style={undefined}>
              <WebView
                automaticallyAdjustContentInsets={true}
                domStorageEnabled={true}
                javaScriptEnabled={true}
                onNavigationStateChange={[Function]}
                onShouldStartLoadWithRequest={[Function]}
                scalesPageToFit={true}
                source={
                  Object {
                    "baseUrl": "about:blank",
                    "html": "<!DOCTYPE html>
                  <html>
                      <head>
                          <meta charset=\"utf-8\">
                          <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">
                          <meta name=\"viewport\" content=\"initial-scale=1, maximum-scale=1\">
                          <meta name=\"format-detection\" content=\"telephone=no\">
                          <meta name=\"format-detection\" content=\"date=no\">
                          <meta name=\"format-detection\" content=\"address=no\">
                          <meta name=\"format-detection\" content=\"email=no\">
                  
                          <title></title>
                  
                  
                          <style type=\"text/css\">
                              body, html, #height-wrapper {
                                  margin: 0;
                                  padding: 0;
                              }
                              #height-wrapper {
                                  position: absolute;
                                  top: 0;
                                  left: 0;
                                  right: 0;
                              }
                              body {
                                  font-family: \"Open Sans\", \"Gill Sans\", Arial, sans-serif;
                              }
                              b, strong {
                                  font-family: \"Open Sans\", \"Gill Sans\", Arial, sans-serif;
                                  font-weight: bold;
                              }
                              h1, h2, h3, h4, h5, h6 {
                                  margin-top: 10px;
                                  font-family: \"Open Sans\", \"Gill Sans\", Arial, sans-serif;
                                  font-weight: 500;
                              }
                              img {
                                height: auto;
                                width: auto;
                                max-width: 300px;
                                max-height: 300px;
                              }
                              p {
                                margin: 0;
                              }
                              p{margin-top: 10px;}
                          </style>
                      </head>
                      <body>
                          <p>Halp!</p>
                  
                  
                      <script>
                  
                      ;(function() {
                      var wrapper = document.createElement(\"div\");
                      wrapper.id = \"height-wrapper\";
                      while (document.body.firstChild) {
                          wrapper.appendChild(document.body.firstChild);
                      }
                      document.body.appendChild(wrapper);
                      var i = 0;
                      function updateHeight() {
                          document.title = wrapper.clientHeight;
                          window.location.hash = ++i;
                      }
                      updateHeight();
                      window.addEventListener(\"load\", function() {
                          updateHeight();
                          setTimeout(updateHeight, 1000);
                      });
                      window.addEventListener(\"resize\", updateHeight);
                      }());
                  
                      </script>
                      </body>
                  </html>",
                  }
                }
                style={
                  Array [
                    undefined,
                    Object {
                      "height": 0,
                      "width": 295,
                    },
                  ]
                } />
            </View>
            <TouchableOpacity
              activeOpacity={0.5}
              disabled={false}
              onPress={[Function]}
              style={
                Array [
                  undefined,
                  undefined,
                ]
              }>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={undefined}>
                Close
              </Text>
            </TouchableOpacity>
          </ScrollView>
        </View>
        <TouchableOpacity
          activeOpacity={0.5}
          onPress={[Function]}
          style={undefined}>
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontFamily": "FontAwesome",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }>
            
          </Text>
        </TouchableOpacity>
      </Modal>
    </View>
  </View>
</View>
`;
